css textarea wrap/padding correction

--- a/plugins/input-dialog/interpreter.css
+++ b/plugins/input-dialog/interpreter.css
@@ -379,8 +379,8 @@ div.control-bar {
 
 textarea.hidden-textarea {
 	position: absolute;
-	white-space: nowrap;
-	/*word-wrap: nowrap;*/
+	white-space: pre;
+	word-wrap: normal;
 	overflow: auto;
 	font: 14px/20px Roboto Mono,monospace;
 	/*left: 5px;
